feat(dashboard): cierra bundle HU-F18 + HU-F17 — dashboard 25 activos + historial
- 2 endpoints REST públicos: GET /api/v1/dashboard/snapshot (25 tickers
  agrupados por mercado + equity + sparklines intradía + P&L no realizado),
  GET /api/v1/orders (historial paginado con filtros opcionales ticker+side,
  cap size 100, sort fijo submittedAt DESC).
- Módulo dashboard nuevo: DashboardController + DashboardService +
  BarsOrchestrator (fan-out paralelo con cap 1.5s/ticker) + DashboardMapper.
- Módulo trading/history nuevo: OrderHistoryController + OrderHistoryService
  + OrderSpecifications (factory para JpaSpecificationExecutor) + Mapper.
- Cache Redis PriceCache TTL 30s (CachedMarketDataAdapter decorator)
  amortiza polling 30s/usuario vs rate-limit Alpaca. Cubre deuda viva #19.
- PortfolioService.getAccountEquity(userId, prices) calcula equity total y
  P&L no realizado vs cost basis con D-EQUITY-PARTIAL para precios parciales.
- MarketDataAdapter.getIntradayBars(ticker) extiende el adapter con bars
  intradía 15Min para sparklines (sin cache en V1).
- HU-F17 promovida al MVP siguiendo ROADMAP §3.4 (desarrollo a tiempo).
- Frontend /dashboard: EquityCard + TickerGrid responsive 5×5 con sparklines
  recharts minimales + RecentOrdersWidget colapsable. Polling React Query 30s
  + botón refresh manual. Sin tests UI per [[feedback-coverage-vs-velocidad]].
- 3 deudas vivas cerradas:
  - #19 cache Redis market data (Lote A — CachedMarketDataAdapter).
  - #16 InvalidSideException.sideNotYetImplemented dead code (Lote E).
  - #15 TickerDropdown filtrado por posiciones cuando side=SELL (Lote E).
- 60 tests nuevos: 13 cache+bars unit + 17 dashboard (13 unit + 4 IT) +
  17 historial (10 unit + 7 IT) + 3 dashboard IT adicionales (cross-user,
  sin JWT, cache TTL expira). Suite global: 346 tests verdes (277 unit +
  69 IT), 0 failures, 0 errors, 0 regresiones.
- 3 decisiones emergentes registradas en plan.md §2.4:
  - D25: AllowedTickers.byMarket() Map.copyOf no preservaba orde